NOTES.txt
Out[23]: '\xc2+_\x91x4&\tB\x8doQ\xb2\xc5\xafL\x0b\xdejB'

In [24]: int(o)
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)

/home/mvzink/Projects/pylehash/<ipython console> in <module>()

ValueError: invalid literal for int() with base 10: '\xc2+_\x91x4&\tB\x8doQ\xb2\xc5\xafL\x0b\xdejB'

In [25]: int(o, 2)
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)

/home/mvzink/Projects/pylehash/<ipython console> in <module>()

ValueError: invalid literal for int() with base 2: '\xc2+_\x91x4&\tB\x8doQ\xb2\xc5\xafL\x0b\xdejB'

In [26]: o = hashlib.sha1('hi')

In [27]: p = hashlib.sha1('ho')

In [28]: int(o.hexdigest(), 16)
Out[28]: 1108511466751246535651873691693820705768143219266L

In [29]: s = int(o.hexdigest(), 16)

In [30]: - ^ -
------------------------------------------------------------
   File "<ipython console>", line 1
     - ^ -
       ^
SyntaxError: invalid syntax


In [31]: s ^ s
Out[31]: 0L

In [32]: n = int(p.hexdigest(), 16)

In [33]: n ^ s
Out[33]: 504486741529691922651333380062922150298588437232L

In [34]: 1 >> 160
Out[34]: 0

In [35]: 1 << 160
Out[35]: 1461501637330902918203684832716283019655932542976L

In [36]: herp = n ^ s

In [37]: herp == s ^ n
Out[37]: True

In [38]: derp = 1 << 160

In [39]: herp > derp
Out[39]: False

In [40]: derp > herp
Out[40]: True
